--- a/css/main.css
+++ b/css/main.css
@@ -12,10 +12,10 @@ body
 
 :root
 {
-    --primary: #c2000b;
-	--primary-light: #faaB7f;
-	--secondary: #f96311;
-	--gradient: linear-gradient(to right,#c2000b, #f96311);
+    --primary: #02353c;
+	--primary-light: #2eaf7d;
+	--secondary: #73ff70;
+	--gradient: linear-gradient(to right,#2eaf7d, #02353c);
 }
 
 .link
@@ -65,6 +65,12 @@ ul
     background-image: url(../pictures/fa-prev.png);
     width: 30px;
     height: 30px;
+}
+
+.logo
+{
+    height: 5rem;
+    width: 5rem;
 }
 
 /* Main */
@@ -141,6 +147,16 @@ ul
     left: 0;
 }
 
+.menu .row .mobile-menu-items .menu-item .link
+{
+    color: #ffff;
+}
+
+.menu .row .mobile-menu-items .menu-item .social-link i
+{
+   color: #ffff;
+}
+
 .menu .row .link
 {
    color: #ffff;
@@ -149,12 +165,6 @@ ul
 .menu .row .link:hover
 {
    text-decoration: underline #ffff ;
-}
-
-.menu .row .logo
-{
-    height: 5rem;
-    width: 5rem;
 }
 
 .menu .row .text-logo
@@ -221,9 +231,9 @@ ul
     text-decoration: none;
 }
 
-.menu .social-link:hover
+.menu .social-link i:hover
 {
-   background-color: var(--secondary);
+    color: var(--primary-light);
 }
 
 .menu .menu-btn
@@ -277,7 +287,7 @@ ul
 
 .header
 {
-  height: 30rem;
+  min-height: 30rem;
   width: 100%;
 }
 
@@ -316,25 +326,19 @@ ul
 {
     .header .intro-text
     {
-       padding-right: 20%;
+       padding-right: 15%;
+       padding-left: 15%;
     }
 }
 
-.header .intro .stat
+@media screen and (max-width: 768px)
 {
-    min-width: 7rem;
-    border-radius: 10px;
-    animation: slide-up 3s 1;
-    position: relative;
-}
-
-@media screen and (max-width: 320px) 
-{
-    .header .intro .stat
+    .header .intro .row
     {
-        display: none;
+        padding-left: 15%;
+        padding-right: 15%;
     }
-}
+} 
 
 .header .intro .stat h4, .header .intro .stat p
 {
@@ -383,24 +387,17 @@ ul
 
 .about-us .row
 {
-  padding-top: 6%;
+  padding-top: 3%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
-}
-
-.about-us .row  img
-{
-    width: 90%;
-    height: 90%;
 }
 
 .about-us .row .image
 {
-    width: 50%;
-    border: 0;
-    border-bottom: 3px;
-    border-color: var(--secondary);
-    border-style: solid;
-    border-radius: 4px;
+    width: 30rem;
+    height: 20rem;
     position: relative;
 }
 
@@ -436,6 +433,12 @@ ul
     border-style: solid;
 }
 
+.about-us .about-content
+{
+    display: flex;
+    align-items: center;
+}
+
 .about-us .about-content div
 {
     position: relative;
@@ -451,23 +454,76 @@ ul
     animation: slide-out 2s 1;
 }
 
-.about-us .about-content #services .row
+/* @media screen and (max-width: 2560px) 
+{
+    .about-us .row #profile-text
+    {
+        margin-left: 5%;
+    }
+} */
+
+.about-us .about-content .services .row
 {
     width: 15rem;
-    height: 12rem;
+    height: 10rem;
     border-radius: 5px;
-    background-image: var(--gradient);
+    border-width: 3px;
+    border-style: solid;
+    border-color: #ffff;
+    padding: 0;
+    align-items: center;
+    position: relative;
 }
 
-.about-us .about-content #services .row h2
+.about-us .about-content .services .row:hover
+{
+    border-color: var(--primary);
+}
+
+.about-us .about-content .services .row .description
+{
+    display: none;
+    border-radius: 3px;
+    top: 3rem;
+    left: 6rem;
+    z-index: 10;
+    min-width: 15rem;
+    min-height: 6rem;
+    background-color: var(--primary);
+    position: absolute;
+}
+
+.about-us .about-content .services .row h2
 {
     font-weight: bold;
+    color: var(--primary);
 }
 
-.about-us .about-content #services .row .service-image
+.about-us .about-content .services .row .service-image
 {
     height: 5rem;
     width: 5rem;
+    top: 10px;
+}
+
+.about-us .about-content .why-us .why-us-image
+{
+    width: 20rem;
+    height: 15rem;
+    animation: slide-out 2s 1;
+    position: relative;
+}
+
+.about-us .about-content .why-us .why-us-content
+{
+    animation: slide-in 2s 1;
+    position: relative;
+}
+
+.about-us .about-content .why-us h2
+{
+  font-weight: bold;
+  color: var(--primary);
 }
 
 /* KeyFrames */
@@ -511,6 +567,19 @@ ul
     }
 }
 
+@keyframes slide-down 
+{
+    from
+    {
+        top: -10rem;
+    }
+
+    to
+    {
+        top: auto;
+    }
+}
+
 @keyframes fade-in 
 {
     from
@@ -521,5 +590,31 @@ ul
     to
     {
         visibility: visible;
+    }
+}
+
+@keyframes fade-out
+{
+    from
+    {
+        visibility: visible;
+    }
+
+    to
+    {
+        opacity: 0;
+    }
+}
+
+@keyframes typing 
+{
+    0%
+    {
+        width: 0;
+    }
+
+    100%
+    {
+        width: 100%;
     }
 }
