--- a/css/main.css
+++ b/css/main.css
@@ -394,6 +394,13 @@ ul
   width: 100%;
 }
 
+.about-us .row img
+{
+    width: 100%;
+    height: 100%;
+}
+
+
 .about-us .row .image
 {
     width: 30rem;
