--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,17 @@ ul
     height: 30px;
 }
 
+.link
+{
+    color: #ffff;
+}
+
+.link:hover
+{
+   color: #ffff;
+   text-decoration: underline #ffff ;
+}
+
 .logo
 {
     height: 5rem;
@@ -147,24 +158,9 @@ ul
     left: 0;
 }
 
-.menu .row .mobile-menu-items .menu-item .link
-{
-    color: #ffff;
-}
-
 .menu .row .mobile-menu-items .menu-item .social-link i
 {
    color: #ffff;
-}
-
-.menu .row .link
-{
-   color: #ffff;
-}
-
-.menu .row .link:hover
-{
-   text-decoration: underline #ffff ;
 }
 
 .menu .row .text-logo
@@ -199,6 +195,8 @@ ul
 .menu .social-icons
 {
     padding-left: 7rem;
+    position: absolute;
+    right: 30px;
 }
 
 @media  screen and (max-width: 768px) 
@@ -234,6 +232,7 @@ ul
 .menu .social-link i:hover
 {
     color: var(--primary-light);
+    transform: scale(1.1);
 }
 
 .menu .menu-btn
@@ -313,13 +312,12 @@ ul
 {
     width: 100%;
     margin-left: 3%;
+    position: relative;
 }
 
 .header .intro-text
 {
     padding-left: 3%;
-    animation: slide-in 2s 1;
-    position: relative;
 }
 
 @media screen and (max-width: 768px) 
@@ -348,39 +346,21 @@ ul
 
 .header .next
 {
-    left: 93%;
+   position: absolute;
+   right: 30px;
 }
 
-@media screen and (min-width: 2560px) 
+@media screen and (max-width: 425px)
 {
     .header .next
     {
-        left: 92%;
+       right: 5px;
     }
 }
 
-@media screen and (max-width: 768px) 
+.header .prev
 {
-    .header .next
-    {
-        left: 90%;
-    }
-}
-
-@media screen and (max-width: 320px) 
-{
-    .header .next
-    {
-        left: 88%;
-    }
-}
-
-@media screen and (max-width: 425px) 
-{
-    .header .prev
-    {
-        left: -2%;
-    }
+    position: absolute;
 }
 
 /* About Us */
@@ -394,14 +374,14 @@ ul
   width: 100%;
 }
 
-.about-us .row img
+.about-us .row .image
 {
-    width: 100%;
-    height: 100%;
+    width: 30rem;
+    height: 20rem;
+    position: relative;
 }
 
-
-.about-us .row .image
+.about-us .row .journey-image
 {
     width: 30rem;
     height: 20rem;
@@ -440,15 +420,16 @@ ul
     border-style: solid;
 }
 
-.about-us .about-content
-{
-    display: flex;
-    align-items: center;
-}
-
 .about-us .about-content div
 {
     position: relative;
+}
+
+.about-us .about-content .content
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .about-us .about-content .content:nth-child(1)
@@ -460,14 +441,6 @@ ul
 {
     animation: slide-out 2s 1;
 }
-
-/* @media screen and (max-width: 2560px) 
-{
-    .about-us .row #profile-text
-    {
-        margin-left: 5%;
-    }
-} */
 
 .about-us .about-content .services .row
 {
@@ -506,6 +479,11 @@ ul
     color: var(--primary);
 }
 
+.about-us .about-content .services:nth-child(2)
+{
+    padding-top: 3%;
+}
+
 .about-us .about-content .services .row .service-image
 {
     height: 5rem;
@@ -531,6 +509,215 @@ ul
 {
   font-weight: bold;
   color: var(--primary);
+}
+
+@media screen and (max-width: 2560px) and (min-width: 1207px)
+{
+    .about-us #main-h
+    {
+        margin-top: 2%;
+    }
+
+    .about-us .about-content .content p
+    {
+        padding-right: 20%;
+        padding-left: 20%;
+    }
+
+    .about-us .about-content .journey-image
+    {
+        width: 30rem;
+        height: 18rem;
+    }
+
+    .about-us .tabs
+    {
+        width: 100%;
+    }
+
+    .about-us .tabs .tab-btn
+    {
+        margin-left: 10%;
+    }
+
+    .about-us .about-content .services .service
+    {
+        padding-left: 6%;
+        padding-right: 6%;
+    }
+}
+
+@media screen and (max-width: 768px)
+{
+    .about-us #main-h
+    {
+        margin-left: 3%;
+    }
+
+    .about-us .tabs .tab-btn
+    {
+        width: 100%;
+    }
+
+    .about-us .about-content .content p
+    {
+      padding-left: 15%;
+      padding-right: 10%;
+    }
+
+    .about-us .about-content .services:nth-child(1) .service:nth-child(3)
+    {
+        margin-top: 10%;
+    }
+
+    .about-us .about-content .why-us-content
+    {
+        padding-left: 10%;
+    }
+}
+
+@media screen and (max-width: 425px)
+{
+    .about-us .about-content .services:nth-child(2)
+    {
+        padding-top: 0;
+    }
+
+    .about-us .about-content .services:nth-child(1) .service:nth-child(3)
+    {
+        margin-top: 5%;
+    }
+
+    .about-us .about-content .services .row .description
+    {
+        left: 4rem;
+    }
+}
+
+@media screen and (max-width: 375px)
+{
+    .about-us .tabs .tab-btn
+    {
+        font-size: small;
+    }
+}
+
+@media screen and (max-width: 320px)
+{
+    .about-us .about-content .image
+    {
+       width: 26rem;
+       height: 16rem;
+    }
+
+    .about-us .about-content .journey-image
+    {
+        width: 25rem;
+        height: 15rem;
+    }
+
+    .about-us .tabs .tab-btn
+    {
+        font-size: x-small;
+    }
+
+    .about-us .about-content .services .row .description
+    {
+        left: 2rem;
+    }
+}
+
+/* Footer */
+footer
+{
+    background-image: url(../pictures/puzzles.png);
+    background-size: cover;
+    width: 100%;
+}
+
+footer .social-link i
+{
+   font-size: 25px;
+   color: #ffff;
+}
+
+footer .social-link
+{
+    background-color: #2eaf7d;
+    width: 40px;
+    border-radius: 100%;
+    text-decoration: none;
+}
+
+footer .social-link:hover
+{
+    transform: scale(1.1);
+    background-color: var(--primary);
+}
+
+footer .quick-links li
+{
+    margin-left: 15%;
+    margin-right: 15%;
+}
+
+footer .quick-links li .link
+{
+    white-space: nowrap;
+}
+
+.footer-cover
+{
+    background-color: #02353c9f;
+}
+
+.footer-cover .container-flex:nth-child(1) .row:nth-child(1)
+{
+    animation: slide-in 2s 1;
+    position: relative;
+}
+
+.footer-cover .container-flex:nth-child(1) .row:nth-child(2)
+{
+    animation: fade-in 2s 1;
+}
+
+.closing
+{
+    background-image: var(--gradient);
+}
+
+.closing h2
+{
+   color: #ffff;
+   font-weight: bold;
+}
+
+@media screen and (max-width: 425px)
+{
+    footer .quick-links
+    {
+      padding-left: 0;
+    }
+
+    footer .quick-links li
+    {
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    
+    footer .quick-links li .link
+    {
+        font-size: small;
+    }
+}
+
+@media screen and (max-width: 375px)
+{
+    footer .quick-links li .link
+    {
+        white-space: nowrap;
+    }
 }
 
 /* KeyFrames */
