--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body
     --primary: #02353c;
 	--primary-light: #2eaf7d;
 	--secondary: #73ff70;
+    --tertiary: #055661;
 	--gradient: linear-gradient(to right,#2eaf7d, #02353c);
 }
 
@@ -363,6 +364,157 @@ ul
     position: absolute;
 }
 
+/* Chat Bot */
+
+.chatbot
+{
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    z-index: 10;
+}
+
+.chatbot .chat-btn
+{
+    background-image: url(../pictures/chatbot.png);
+    background-color: var(--primary-light);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: center;
+    background-position-y: center;
+    border-width: 0;
+    outline: none;
+    width: 60px;
+    height: 60px;
+    border-radius: 100%;
+    animation: slide-out 1s 1;
+    position: relative;
+}
+
+.chatbot .chat-btn:hover
+{
+    transform: scale(1.1);
+}
+
+.chatbot .chat-box
+{
+    width: 22rem;
+    height: 32rem;
+    background-color: #ffff;
+    background-image: url(../pictures/logo.png);
+    background-size: 150px;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 2px var(--primary) solid;
+    position: fixed;
+    border-radius: 20px;
+    bottom: 2rem;
+    right: 3rem;
+    overflow-y: scroll;
+    display: none;
+}
+
+@media screen and (max-width: 768px)
+{
+    .chatbot .chat-box
+    {
+        right: 5rem;
+        bottom: 3rem;
+    }
+}
+
+@media screen and (max-width: 425px)
+{
+    .chatbot .chat-box
+    {
+        width: 18rem;
+        height: 28rem;
+        right: 4rem;
+    }
+}
+
+@media screen and (max-width: 320px)
+{
+    .chatbot .chat-box
+    {
+        width: 14rem;
+        height: 24rem;
+    }
+}
+
+.chatbot .chat-box div
+{
+   max-width: 100%;
+}
+
+.chatbot .chat-box .bot-text
+{
+   background-color: var(--primary);
+   border-radius: 10px;
+   width: fit-content;
+   max-width: 100%;
+   position: relative;
+}
+
+.chatbot .chat-box .human-text
+{
+   background-color: var(--primary-light);
+   border-radius: 10px;
+   width: fit-content;
+   max-width: 100%;
+   position: relative;
+}
+
+.chatbot .chat-form
+{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+.chatbot .chat-form input[type="text"]
+{
+    width: 80%;
+    height: 2rem;
+    border-radius: 10px;
+    background-color: var(--tertiary);
+    outline: none;
+    border: 2px var(--primary) solid;
+    text-indent: 5%;
+    color: #ffff;
+}
+
+.chatbot .chat-form input[type="text"]::placeholder
+{
+    color: #ffff;
+    padding: 1%;
+}
+
+.chatbot .chat-submit
+{
+    background: none;
+    width: 40px;
+    height: 40px;
+    border-radius: 100%;
+    border-width: 0;
+    outline: none;
+    position: absolute;
+    bottom: 0;
+    right: 1rem;
+}
+
+.chatbot .chat-submit i
+{
+    color: var(--primary);
+    font-size: 25px;
+}
+
+.chatbot .chat-submit:hover i
+{
+    transform: scale(1.1);
+    color: var(--primary-light)
+}
+
 /* About Us */
 
 .about-us .row
@@ -633,6 +785,7 @@ footer
     background-image: url(../pictures/puzzles.png);
     background-size: cover;
     width: 100%;
+    bottom: 0;
 }
 
 footer .social-link i
