--- a/css/main.css
+++ b/css/main.css
@@ -414,12 +414,29 @@ ul
     display: none;
 }
 
+::-webkit-scrollbar-button
+{
+   background-color: var(--primary);
+}
+
 @media screen and (max-width: 768px)
 {
     .chatbot .chat-box
     {
         right: 5rem;
         bottom: 3rem;
+    }
+
+    .chatbot .chat-form 
+    {
+       margin-bottom: 1rem;
+       min-width: 45%;
+    }
+
+    .chatbot .chat-submit
+    {
+       margin-bottom: 1rem;
+       padding-right: 5%;
     }
 }
 
@@ -431,6 +448,19 @@ ul
         height: 28rem;
         right: 4rem;
     }
+
+    .chatbot .chat-form 
+    {
+       max-width: 64%;
+    }
+}
+
+@media screen and (max-width: 375px)
+{
+    .chatbot .chat-form 
+    {
+       max-width: 75%;
+    }
 }
 
 @media screen and (max-width: 320px)
@@ -440,11 +470,22 @@ ul
         width: 14rem;
         height: 24rem;
     }
+
+    .chatbot .chat-form 
+    {
+       max-width: 65%;
+    }
+
+    .chatbot .chat-submit
+    {
+        padding-left: 5%;
+    }
 }
 
 .chatbot .chat-box div
 {
    max-width: 100%;
+   position: relative;
 }
 
 .chatbot .chat-box .bot-text
@@ -465,14 +506,15 @@ ul
    position: relative;
 }
 
-.chatbot .chat-form
+.chatbot .chat-box .chat-form
 {
-    position: absolute;
-    width: 100%;
+    position: fixed;
+    width: 20em;
+    height: 5em;
     bottom: 0;
 }
 
-.chatbot .chat-form input[type="text"]
+.chatbot input[type="text"]
 {
     width: 80%;
     height: 2rem;
@@ -494,13 +536,13 @@ ul
 {
     background: none;
     width: 40px;
-    height: 40px;
+    height: 7em;
     border-radius: 100%;
     border-width: 0;
     outline: none;
-    position: absolute;
+    position: fixed;
     bottom: 0;
-    right: 1rem;
+    right: 5em;
 }
 
 .chatbot .chat-submit i
@@ -663,6 +705,24 @@ ul
   color: var(--primary);
 }
 
+@media screen and (max-width: 2560px) and (min-width: 2060px)
+{
+    .about-us #main-h
+    {
+        margin-left: 10%;
+    }
+
+    .about-us .about-content .content:nth-child(1)
+    {
+       justify-content: right;
+    }
+
+    .about-us .about-content .content:nth-child(2)
+    {
+        justify-content: left;
+    }
+}
+
 @media screen and (max-width: 2560px) and (min-width: 1207px)
 {
     .about-us #main-h
@@ -673,7 +733,7 @@ ul
     .about-us .about-content .content p
     {
         padding-right: 20%;
-        padding-left: 20%;
+        padding-left: 10%;
     }
 
     .about-us .about-content .journey-image
@@ -777,6 +837,92 @@ ul
     {
         left: 2rem;
     }
+}
+
+/* Techs */
+
+.techs .row
+{
+    justify-content: center;
+}
+
+.techs .row .tech-img:nth-child(1)
+{
+    position: relative;
+    animation: slide-in 2s 1;
+    margin-right: 5%;
+    justify-content: right;
+}
+
+.techs .row .tech-img:nth-child(2)
+{
+    position: relative;
+    animation: slide-out 2s 1;
+    justify-content: left;
+}
+
+@media screen and (max-width: 2560px) and (min-width: 2060px)
+{
+    .techs h1
+    {
+       margin-left: 10%;
+    }
+
+    .techs .row .tech-img:nth-child(1)
+    {
+       margin-right: 8%;
+    }
+}
+
+@media screen and (max-width: 768px) 
+{
+    .techs 
+    {
+       margin-left: 3%;
+    }
+
+    .techs .row .tech-img:nth-child(1),
+    .techs .row .tech-img:nth-child(2)
+    {
+        justify-content: center;
+    }
+
+    .techs .row .tech-img
+    {
+        margin-top: 4%;
+    } 
+    
+    .techs .row .tech-img:nth-child(1)
+    {
+        margin-right: 0;
+    }  
+}
+
+.techs .tech-img img
+{
+    width: 10rem;
+    height: 10rem;
+    position: relative;
+}
+
+.techs h1
+{
+    color: var(--primary);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.techs h1
+{
+    color: var(--primary);
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.techs .tech-text p
+{
+    color: #ffff;   
+    font-weight: 600; 
 }
 
 /* Footer */
@@ -965,3 +1111,5 @@ footer .quick-links li .link
         width: 100%;
     }
 }
+
+
