--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,16 @@ ul
     width: 5rem;
 }
 
+@media screen and (max-width: 768px) 
+{
+    .logo
+    {
+        position: absolute;
+        top: 1%;
+        left: 3%;
+    }
+}
+
 ::placeholder
 {
    color: var(--primary);
@@ -140,7 +150,7 @@ ul
     margin-top: 2rem;
     margin-left: 33rem;
     position: absolute;
-    background-color: var(--primary);
+    background-color: var(--secondary);
     border-radius: 10px;
     z-index: 10;
 }
@@ -150,6 +160,12 @@ ul
     .menu .row .mobile-menu-items
     {
         margin-left: 37rem;
+    }
+
+    .menu .row .mobile-menu-items
+    {
+        top: 3%;
+        right: 5%;
     }
 }
 
@@ -279,6 +295,7 @@ ul
     {
         display: block;
         margin-left: 45rem;
+        top: 3%;
     }
 }
 
@@ -799,6 +816,11 @@ ul
         padding-left: 6%;
         padding-right: 6%;
     }
+
+    .about-us .about-content .why-us .why-us-content
+    {
+        padding-right: 10%;
+    }
 }
 
 @media screen and (max-width: 768px)
@@ -846,6 +868,12 @@ ul
     {
         left: 4rem;
     }
+
+    .about-us .about-content .content p
+    {
+        padding-left: 4%;
+        padding-right: 0;
+    }
 }
 
 @media screen and (max-width: 375px)
@@ -853,6 +881,20 @@ ul
     .about-us .tabs .tab-btn
     {
         font-size: small;
+    }
+}
+
+@media screen and (max-width: 320px)
+{
+
+    .about-us .about-content .content:nth-child(1)
+    {
+       padding-left: 10%;
+    }
+
+    .about-us .about-content .content:nth-child(2)
+    {
+        padding-left: 10%;
     }
 }
 
@@ -879,6 +921,12 @@ ul
     {
         left: 2rem;
     }
+
+    .about-us .about-content .content p
+    {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
 /* Techs */
@@ -888,6 +936,12 @@ ul
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.techs .slider .slider-img
+{
+    margin-left: 1%;
+    margin-right: 1%;
 }
 
 .techs .container-flex img
@@ -926,6 +980,7 @@ ul
     .techs .slider
     {
         display: inline-block;
+        text-align: center;
     }
 
     .techs .slider .slider-img
@@ -941,17 +996,30 @@ ul
 
 @media screen and (max-width: 375px)
 {
-    .techs .slider
+    .techs .slider .slider-img
     {
-        margin-left: 5%;
+        margin-right: 10%;
     }
 }
 
 @media screen and (max-width: 320px)
 {
+    .techs .slider .slider-img
+    {
+        margin-right: 5%;
+    }
+}
+
+@media screen and (max-width: 291px)
+{
     .techs .slider
     {
-        margin-left: 0;
+        width: 60%;
+    }
+
+    .techs .slider .slider-img
+    {
+        margin-right: 15%;
     }
 }
 
@@ -1122,7 +1190,7 @@ footer .social-link i
 
 footer .social-link
 {
-    background-color: var(--primary-light);
+    background-color: var(--primary);
     width: 40px;
     border-radius: 100%;
     text-decoration: none;
@@ -1131,7 +1199,7 @@ footer .social-link
 footer .social-link:hover
 {
     transform: scale(1.1);
-    background-color: var(--primary);
+    background-color: var(--secondary);
 }
 
 footer .quick-links li
