--- a/css/main.css
+++ b/css/main.css
@@ -12,11 +12,11 @@ body
 
 :root
 {
-    --primary: #04203D;
-	--primary-light: #2AD8DD;
+    --primary: #04203d;
+	--primary-light: #2ad8dd;
 	--secondary: #084c94;
-    --tertiary: #12BCD8;
-	--gradient: linear-gradient(to right,#04203D, #084c94);
+    --tertiary: #12Bcd8;
+	--gradient: linear-gradient(to right,#04203d, #084c94);
 }
 
 .link
@@ -95,6 +95,15 @@ ul
         left: 3%;
     }
 }
+
+@media screen and (max-width: 425px)
+{
+    .logo
+    {
+        height: 4rem;
+        width: 4rem;
+    }
+} 
 
 ::placeholder
 {
@@ -377,16 +386,22 @@ ul
        padding-right: 15%;
        padding-left: 15%;
     }
-}
 
-@media screen and (max-width: 768px)
-{
     .header .intro .row
     {
         padding-left: 15%;
         padding-right: 15%;
     }
-} 
+}
+
+@media screen and (max-width: 375px)
+{
+    .header .intro-text
+    {
+        font-size: 14px;
+        padding-top: 5%;
+    }
+}
 
 .header .intro .stat h4, .header .intro .stat p
 {
@@ -702,6 +717,8 @@ ul
     padding: 0;
     align-items: center;
     position: relative;
+    flex-direction: column;
+    flex-wrap: nowrap;
 }
 
 .about-us .about-content .services .row:hover
@@ -771,16 +788,6 @@ ul
     {
         margin-left: 10%;
     }
-
-    .about-us .about-content .content:nth-child(1)
-    {
-       justify-content: right;
-    }
-
-    .about-us .about-content .content:nth-child(2)
-    {
-        justify-content: left;
-    }
 }
 
 @media screen and (max-width: 2560px) and (min-width: 1207px)
@@ -792,8 +799,8 @@ ul
 
     .about-us .about-content .content p
     {
-        padding-right: 30%;
-        padding-left: 10%;
+        padding-right: 20%;
+        padding-left: 15%;
     }
 
     .about-us .about-content .journey-image
@@ -1090,11 +1097,16 @@ ul
     height: 6rem;
 }
 
+.contact form 
+{
+    justify-content: left;
+}
+
 .contact form input[type=text],
 .contact form input[type=email],
 .contact form input[type=tel]
 {
-    width: 100%;
+    width: 110%;
     height: 40px;
     border-radius: 10px;
     text-indent: 10px;
@@ -1103,6 +1115,51 @@ ul
     color: var(--primary);
 }
 
+.contact form textarea
+{
+    width: 110%;
+}
+
+@media  screen and (max-width: 2560px)  and (min-width: 2060px)
+{
+    .contact form
+    {
+        justify-content: center;
+    }
+
+    .contact form input[type=text],
+    .contact form input[type=email],
+    .contact form input[type=tel]
+    {
+        width: 80%;
+    }
+
+    .contact form textarea
+    {
+       width: 80%;
+    }
+}
+
+@media  screen and (max-width: 1440px) and (min-width: 1207px)
+{
+    .contact form
+    {
+        justify-content: left;
+        padding-left: 8%;
+    }
+
+    .contact form input[type=text],
+    .contact form input[type=email],
+    .contact form input[type=tel]
+    {
+        width: 90%;
+    }
+
+    .contact form textarea
+    {
+        width: 90%;
+    }
+}
 
 @media  screen and (max-width: 768px)
 {
@@ -1128,7 +1185,27 @@ ul
 {
     .contact form 
     {
-        padding-left: 0;
+        padding-left: 3%;
+    }
+}
+
+@media  screen and (max-width: 375px)
+{
+    .contact form 
+    {
+        padding-right: 3%;
+    }
+
+    .contact form input[type=text],
+    .contact form input[type=email],
+    .contact form input[type=tel]
+    {
+        width: 100%;
+    }
+
+    .contact form textarea
+    {
+        width: 100%;
     }
 }
 
@@ -1142,6 +1219,11 @@ ul
 }
 
 /* Projects */
+
+.projects .slider
+{
+    justify-content: center;
+}
 
 .projects .project-control
 {
@@ -1164,6 +1246,45 @@ ul
     right: 1rem;
 }
 
+@media screen and (max-width: 2560px) and (min-width: 2060px) 
+{
+    .projects #prev-project
+    {
+        left: 20rem;
+    }
+
+    .projects #next-project
+    {
+        right: 20rem;
+    }
+}
+
+@media screen and (max-width: 425px)
+{
+    .projects #prev-project
+    {
+        left: 3rem;
+    }
+
+    .projects #next-project
+    {
+        right: 3rem;
+    }
+}
+
+@media screen and (max-width: 375px)
+{
+    .projects #prev-project
+    {
+        left: 4rem;
+    }
+
+    .projects #next-project
+    {
+        right: 4rem;
+    }
+}
+
 .projects .project-box
 {
     width: 20rem;
@@ -1171,9 +1292,110 @@ ul
     border: 2px var(--primary) solid;
     display: flex;
     position: relative;
-    background-image: url(../pictures/cover3.png);
-    background-repeat: no-repeat;
     border: 0;
+    box-shadow: 10px 10px 10px 5px #000000b7;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 0;
+}
+
+@media screen and (max-width: 2560px) and (min-width: 2060px) 
+{
+    .projects .project-box
+    {
+        margin-left: 5%;
+    }
+}
+
+@media screen and (max-width: 768px)
+{
+    .projects .project-box
+    {
+        width: 15rem;
+        height: 10rem;
+    }
+}
+
+@media screen and (max-width: 425px)
+{
+    .projects .project-box
+    {
+        width: 12rem;
+        height: 7rem;
+    }
+
+    .projects .project-box .project-content
+    {
+        top: 15%;
+        padding-left: 0;
+    }
+
+    .projects .project-box p,
+    .projects .project-box h4
+    {
+        font-size: 8px;
+    }
+
+    .projects .slider
+    {
+        transform: scale(1.3);
+    }
+}
+
+@media screen and (max-width: 375px)
+{
+    .projects .project-box
+    {
+        height: 5rem;
+        max-width: 6rem;
+    }
+
+    .projects .project-box p
+    {
+        font-size: 7px;
+        text-align: left;
+    }
+
+    .projects .project-box h4
+    {
+        font-size: 7px;
+        white-space: nowrap;
+        text-align: left;
+    }
+
+    .projects .slider
+    {
+        transform: scale(1.5);
+    }
+}
+
+.projects .project-img,
+.projects .project-cover
+{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+
+.projects .project-box div, 
+.projects .project-cover
+{
+    display: none;
+}
+
+.projects .project-box .project-content
+{
+    position: absolute;
+    bottom: 2rem;
+    padding-left: 2%;
+}
+
+.projects h1
+{
+    font-weight: bold;
+    color: var(--primary);
+    font-size: 20px;
 }
 
 .projects .project-box p
@@ -1181,30 +1403,10 @@ ul
     color: #ffff;
 }
 
-.projects .project-box .row
+.projects .project-box h4
 {
-    background-color: var(--primary-light);
-    position: absolute;
-    width: 100%;
-    bottom: -10px;
-    border: 0;
-}
-
-.projects .project-box .row .cat
-{
-    position: relative;
-    left: 0;
-}
-
-.projects .project-box .row .time
-{
-    position: absolute;
-    right: 0;
-}
-
-.projects .project-box .row p
-{
-    color: var(--primary);
+    font-weight: bold;
+    color: #ffff;
 }
 
 /* Footer */
@@ -1420,28 +1622,18 @@ footer .quick-links li .link
    }
 }
 
-@keyframes swipe 
+@keyframes flip 
 {
     from
     {
-        width: 0;
-    }
-
-    to
-    {
-        width: 20rem;
+      transform: rotateY(180deg);;
     }
 }
 
-@keyframes slide-next 
+@keyframes flip-back 
 {
     from
     {
-        left: 0;
-    }
-    
-    to 
-    {
-        left: -100px;
+      transform: rotateY(180deg);;
     }
 }
