--- a/css/main.css
+++ b/css/main.css
@@ -868,6 +868,11 @@ ul
         padding-left: 4%;
         padding-right: 0;
     }
+
+    .about-us .about-content .content:nth-child(1)
+    {
+        padding-left: 10%;
+    }
 }
 
 @media screen and (max-width: 375px)
@@ -933,14 +938,25 @@ ul
 
 .techs .slider .slider-img
 {
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 2%;
+    margin-right: 2%;
+    max-width: 7rem;
+    background-color: #fcf6f6;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    border-radius: 10px;
+    background-size: cover;
+}
+
+.techs .slider .slider-img:hover
+{
+    background-image: url(../pictures/cover3.png);
 }
 
 .techs .container-flex img
 {
-    width: 6rem;
-    height: 6rem;
+    width: 5rem;
+    height: 5rem;
     position: relative;
 }
 
@@ -979,6 +995,12 @@ ul
     .techs .slider .slider-img
     {
         display: inline;
+        background: none;
+    }
+
+    .techs .slider .slider-img:hover
+    {
+        background-image: none;
     }
     
     .techs .container-flex img
@@ -989,6 +1011,11 @@ ul
 
 @media screen and (max-width: 375px)
 {
+    .techs .slider
+    {
+        padding-left: 4%;
+    }
+
     .techs .slider .slider-img
     {
         margin-right: 10%;
@@ -1310,6 +1337,11 @@ ul
 
 @media  screen and (max-width: 768px)
 {
+    .projects h1
+    {
+        padding-left: 3%;
+    }
+
     .projects .project-image
     {
         width: 80%;
@@ -1341,6 +1373,20 @@ ul
     }
 }
 
+@media  screen and (max-width: 320px)
+{
+    .projects .project-details .status p
+    {
+        width: 100%;
+        white-space: nowrap;
+    }
+
+    .projects .project-details .status div:nth-child(2)
+    {
+        margin-left: 10%;
+    }
+}
+
 /* Footer */
 footer
 {
@@ -1361,13 +1407,13 @@ footer .social-link
     background-color: var(--primary);
     width: 40px;
     border-radius: 100%;
-    text-decoration: none;
 }
 
 footer .social-link:hover
 {
     transform: scale(1.1);
     background-color: var(--secondary);
+    text-decoration: none;
 }
 
 footer .quick-links li
