--- a/css/main.css
+++ b/css/main.css
@@ -869,9 +869,14 @@ ul
         padding-right: 0;
     }
 
-    .about-us .about-content .content:nth-child(1)
+    .about-us .about-content .image
     {
         padding-left: 10%;
+    }
+
+    .about-us .about-content .services:nth-child(2)
+    {
+        padding-top: 0;
     }
 }
 
@@ -885,14 +890,10 @@ ul
 
 @media screen and (max-width: 320px)
 {
-    .about-us .about-content .content:nth-child(1)
-    {
-       padding-left: 10%;
-    }
-
+    .about-us .about-content .content:nth-child(1),
     .about-us .about-content .content:nth-child(2)
     {
-        padding-left: 10%;
+       padding-left: 8%;
     }
 }
 
